--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prebuild": "rm -rf esm cmj",
     "build": "tsc --module ES2020 --declaration true --outDir esm && tsc --module CommonJS --outDir cmj",
     "postbuild": "prettier --write cmj/**/*.js esm/**/*.js esm/**/*.d.ts",
-    "prepublishOnly": "yarn run build"
+    "prepublishOnly": "yarn run build",
+    "install": "yarn run build"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
