--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
   "peerDependencies": {
-    "react": ">=16.4.0",
-    "react-dom": ">=16.4.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "tslib": ">=2.0.0"
   },
   "scripts": {
