--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "@size-limit/preset-small-lib": "^4.10.1",
     "@types/jest": "^26.0.20",
     "@types/react": "^16.14.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "size-limit": "^4.10.1",
     "tslib": "^2.1.0",
     "typescript": "^4.2.3",
